--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -1,4 +1,36 @@
+@import "./helpers/fonts";
+@import "./helpers/placeholders";
+@import "./helpers/mixins";
+@import "./helpers/variables";
+@import "./layout/header";
+@import "./layout/section";
+@import "./layout/footer";
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
+  font-size: 14px;
+  font-family: "Raleway", sans-serif;
+  @media only screen and (min-width: 468px) and (min-height: 321px) {
+    font-size: 18px;
+  }
+
+  @media only screen and (min-width: 768px) and (min-height: 468px) {
+    font-size: 22px;
+  }
+
+  @media only screen and (min-width: 1224px) and (max-height: 767px) {
+    font-size: 26px;
+  }
+
+  @media only screen and (min-width: 1224px) and (min-height: 768px) {
+    font-size: 30px;
+  }
 }
+
+
+
