--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,169 @@
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Raleway"), local("Raleway-Regular"), url(https://fonts.gstatic.com/s/raleway/v12/1Ptug8zYS_SKggPNyC0ITw.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 700;
+  src: local("Raleway Bold"), local("Raleway-Bold"), url(https://fonts.gstatic.com/s/raleway/v12/1Ptrg8zYS_SKggPNwJYtWqZPAA.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
+section #response span {
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%); }
+
+header, section, footer {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -o-flex;
+  display: -ms-flex;
+  display: flex; }
+
+header {
+  -webkit-flex-flow: column nowrap;
+  flex-flow: column nowrap;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  background-color: #222222;
+  color: #C7F1FF;
+  min-height: 25vh;
+  padding: 0 .8em; }
+  header h1 {
+    font-size: 3em;
+    text-align: center; }
+
+section {
+  -webkit-flex-flow: column nowrap;
+  flex-flow: column nowrap;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  background: #F5F9FA;
+  color: #000;
+  width: 100%;
+  min-height: 50vh;
+  padding: 5% 2.5%;
+  border: 1px solid green; }
+  @media only screen and (min-width: 468px) and (min-height: 321px) {
+    section {
+      padding: 5% 10%; } }
+  @media only screen and (min-width: 768px) and (min-height: 468px) {
+    section {
+      padding: 5% 15%; } }
+  @media only screen and (min-width: 1224px) and (max-height: 767px) {
+    section {
+      padding: 5% 20%; } }
+  @media only screen and (min-width: 1224px) and (min-height: 768px) {
+    section {
+      padding: 5% 25%; } }
+  section form {
+    width: inherit;
+    text-align: center; }
+    section form label {
+      font-size: 1.5em;
+      font-weight: bold; }
+    section form input {
+      width: 100%;
+      padding: 5px; }
+    section form button {
+      cursor: pointer;
+      font-size: 1.2em;
+      border: 1px solid #222222;
+      border-radius: 5px;
+      background-color: #F5F9FA;
+      color: #000;
+      margin: .3em;
+      outline: none;
+      text-transform: uppercase;
+      -webkit-transition: background-color 0.5s, color 0.5s;
+      -moz-transition: background-color 0.5s, color 0.5s;
+      -o-transition: background-color 0.5s, color 0.5s;
+      transition: background-color 0.5s, color 0.5s; }
+      section form button:hover {
+        background-color: #222222;
+        color: #C7F1FF; }
+  section #response {
+    position: relative;
+    margin-top: 2em;
+    box-shadow: 0 0 4px #222222;
+    height: 6em;
+    width: 100%;
+    background-color: lightgrey;
+    overflow-x: auto;
+    overflow-y: hidden; }
+    section #response span {
+      padding: 5px;
+      position: relative;
+      display: inline-block;
+      font-size: 1em;
+      max-width: 100%; }
+  section .copyButton {
+    font-size: 1em;
+    cursor: pointer;
+    margin-top: .4em;
+    padding: .35em 1em;
+    border: none;
+    outline: none;
+    box-shadow: 0 0 4px #222222;
+    background-color: #F5F9FA;
+    color: #000;
+    text-transform: uppercase;
+    -webkit-transition: background-color 0.5s, color 0.5s;
+    -moz-transition: background-color 0.5s, color 0.5s;
+    -o-transition: background-color 0.5s, color 0.5s;
+    transition: background-color 0.5s, color 0.5s; }
+    section .copyButton:hover {
+      background-color: #222222;
+      color: #C7F1FF; }
+
+footer {
+  min-height: 25vh;
+  background-color: #222222;
+  -webkit-flex-flow: column nowrap;
+  flex-flow: column nowrap;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center; }
+  footer a {
+    font-size: 3em;
+    text-decoration: none;
+    color: #C7F1FF;
+    -webkit-transition: color 0.5s;
+    -moz-transition: color 0.5s;
+    -o-transition: color 0.5s;
+    transition: color 0.5s; }
+    footer a:hover {
+      color: #08FDD8; }
+  footer p {
+    font-size: 1em;
+    color: #fff; }
+
+* {
+  box-sizing: border-box; }
+
 body {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  font-size: 14px;
+  font-family: "Raleway", sans-serif; }
+  @media only screen and (min-width: 468px) and (min-height: 321px) {
+    body {
+      font-size: 18px; } }
+  @media only screen and (min-width: 768px) and (min-height: 468px) {
+    body {
+      font-size: 22px; } }
+  @media only screen and (min-width: 1224px) and (max-height: 767px) {
+    body {
+      font-size: 26px; } }
+  @media only screen and (min-width: 1224px) and (min-height: 768px) {
+    body {
+      font-size: 30px; } }
 
 /*# sourceMappingURL=style.css.map */
